Fix navbar height to prevent search bar misalignment

--- a/client/src/components/layout/Navbar.module.css
+++ b/client/src/components/layout/Navbar.module.css
@@ -26,8 +26,7 @@
   top: 0;
   z-index: 100;
   overflow: visible;
-  min-height: 70px;
-  height: auto;
+  height: 70px;
 }
 
 /* Mobile search and profile buttons */
